# extending-jax

./: CMakeLists.txt  README.md  demo.ipynb  pyproject.toml
include/extending_jax/: kepler.h  kernel_helpers.h  kernels.h  pybind11_kernel_helpers.h  quadrotor.h
lib/: cpu_ops.cc  gpu_ops.cc  pybind11_kernel_helpers.h
src/: cpu_ops.cc  gpu_ops.cc  kernels.cc.cu
src/kepler_jax/: kepler_jax.py
src/quadrotor_dynamics_jax/: __init__.py  quadrotor_dynamics_jax.py
tests/: test_quadrotor_model.py
tests/utils/: rotation.py
